--- a/src/main/resources/assets/specialmobs/lang/en_US.lang
+++ b/src/main/resources/assets/specialmobs/lang/en_US.lang
@@ -15,6 +15,8 @@ potion.potency.7=VIII
 potion.potency.8=IX
 potion.potency.9=X
 
+entity.SpecialMobs.LavaMonster.name=Lava Monster
+
 entity.SpecialMobs.SMFireball.name=Fireball
 entity.SpecialMobs.SMFishHook.name=Fish Hook
 
