--- a/src/main/resources/assets/specialmobs/lang/en_US.lang
+++ b/src/main/resources/assets/specialmobs/lang/en_US.lang
@@ -276,3 +276,13 @@ entity.SpecialMobs.FishingZombie.name=Fishing Zombie
 entity.SpecialMobs.GiantZombie.name=Giant Zombie
 entity.SpecialMobs.HungryZombie.name=Hungry Zombie
 entity.SpecialMobs.PlagueZombie.name=Plague Zombie
+
+enchantment.SpecialMobs.painBow=Agony
+enchantment.SpecialMobs.painSword=Pain
+enchantment.SpecialMobs.plagueBow=Scourge
+enchantment.SpecialMobs.plagueSword=Plague
+enchantment.SpecialMobs.poisonBow=Venom
+enchantment.SpecialMobs.poisonSword=Poison Aspect
+
+death.attack.pain=§c%1$s§f writhed in pain
+death.attack.cooked=§c%1$s§f cooked from the inside out
