--- a/src/main/resources/assets/specialmobs/lang/zh_CN.lang
+++ b/src/main/resources/assets/specialmobs/lang/zh_CN.lang
@@ -99,7 +99,7 @@ entity.SpecialMobs.SpecialCaveSpider.name=洞穴蜘蛛
 entity.SpecialMobs.BabyCaveSpider.name=洞穴蜘蛛幼崽
 entity.SpecialMobs.FlyingCaveSpider.name=飞行洞穴蜘蛛
 entity.SpecialMobs.MotherCaveSpider.name=洞穴育母蜘蛛
-entity.SpecialMobs.ToughCaveSpider.name=强壮的洞穴蜘蛛
+entity.SpecialMobs.ToughCaveSpider.name=强壮洞穴蜘蛛
 entity.SpecialMobs.WebCaveSpider.name=洞穴织网蛛
 entity.SpecialMobs.WitchCaveSpider.name=女巫洞穴蜘蛛
 
@@ -130,8 +130,8 @@ entity.SpecialMobs.ThiefEnderman.name=盗贼末影人
 
 entity.SpecialMobs.SpecialGhast.name=恶魂
 entity.SpecialMobs.BabyGhast.name=恶魂婴儿
-entity.SpecialMobs.FaintGhast.name=虚弱的恶魂
-entity.SpecialMobs.FighterGhast.name=好斗的恶魂
+entity.SpecialMobs.FaintGhast.name=虚弱恶魂
+entity.SpecialMobs.FighterGhast.name=好斗恶魂
 entity.SpecialMobs.KingGhast.name=恶魂之王
 entity.SpecialMobs.MiniGhast.name=小型恶魂
 entity.SpecialMobs.QueenGhast.name=恶魂之后
@@ -178,10 +178,10 @@ entity.SpecialMobs.UnholyGhast.super.20=有人刚刚被消灭了...!
 
 
 entity.SpecialMobs.SpecialPigZombie.name=僵尸猪人
-entity.SpecialMobs.BrutishPigZombie.name=野蛮的僵尸猪人
-entity.SpecialMobs.FishingPigZombie.name=捕鱼的僵尸猪人
-entity.SpecialMobs.GiantPigZombie.name=巨大的僵尸猪人
-entity.SpecialMobs.HungryPigZombie.name=饥饿的僵尸猪人
+entity.SpecialMobs.BrutishPigZombie.name=野蛮僵尸猪人
+entity.SpecialMobs.FishingPigZombie.name=捕鱼僵尸猪人
+entity.SpecialMobs.GiantPigZombie.name=巨大僵尸猪人
+entity.SpecialMobs.HungryPigZombie.name=饥饿僵尸猪人
 entity.SpecialMobs.PlaguePigZombie.name=瘟疫的僵尸猪人
 entity.SpecialMobs.VampirePigZombie.name=吸血鬼猪人
 entity.SpecialMobs.VampirePigZombie.snark.count=16
@@ -221,20 +221,20 @@ entity.SpecialMobs.VampirePigZombie.super.16=噢! 好像很疼!
 
 entity.SpecialMobs.SpecialSilverfish.name=蠹虫
 entity.SpecialMobs.BlindingSilverfish.name=盲视蠹虫
-entity.SpecialMobs.FishingSilverfish.name=钓鱼的蠹虫
-entity.SpecialMobs.FlyingSilverfish.name=飞翔的蠹虫
+entity.SpecialMobs.FishingSilverfish.name=钓鱼蠹虫
+entity.SpecialMobs.FlyingSilverfish.name=飞翔蠹虫
 entity.SpecialMobs.PoisonSilverfish.name=剧毒蠹虫
-entity.SpecialMobs.ToughSilverfish.name=肥硕的蠹虫
+entity.SpecialMobs.ToughSilverfish.name=肥硕蠹虫
 
 entity.SpecialMobs.SpecialSkeleton.name=骷髅弓箭手
-entity.SpecialMobs.BrutishSkeleton.name=野蛮的骷髅弓箭手
+entity.SpecialMobs.BrutishSkeleton.name=野蛮骷髅弓箭手
 entity.SpecialMobs.FireSkeleton.name=火焰骷髅弓箭手
-entity.SpecialMobs.GatlingSkeleton.name=机关枪骷髅弓箭手
-entity.SpecialMobs.GiantSkeleton.name=巨大的骷髅弓箭手
+entity.SpecialMobs.GatlingSkeleton.name=机枪骷髅弓箭手
+entity.SpecialMobs.GiantSkeleton.name=巨大骷髅弓箭手
 entity.SpecialMobs.NinjaSkeleton.name=忍者骷髅弓箭手
 entity.SpecialMobs.PoisonSkeleton.name=剧毒骷髅弓箭手
 entity.SpecialMobs.SniperSkeleton.name=骷髅狙击手
-entity.SpecialMobs.SpitfireSkeleton.name=暴虐的骷髅弓箭手
+entity.SpecialMobs.SpitfireSkeleton.name=暴虐骷髅弓箭手
 entity.SpecialMobs.ThiefSkeleton.name=骷髅盗贼
 
 entity.SpecialMobs.SpecialSlime.name=史莱姆
@@ -252,12 +252,12 @@ entity.SpecialMobs.DesertSpider.name=沙漠蜘蛛
 entity.SpecialMobs.FlyingSpider.name=飞行蜘蛛
 entity.SpecialMobs.GhostSpider.name=幽灵蜘蛛
 entity.SpecialMobs.GiantSpider.name=巨人蜘蛛
-entity.SpecialMobs.HungrySpider.name=饥饿的蜘蛛
+entity.SpecialMobs.HungrySpider.name=饥饿蜘蛛
 entity.SpecialMobs.MotherSpider.name=育母蜘蛛
 entity.SpecialMobs.PaleSpider.name=苍白蜘蛛
 entity.SpecialMobs.PoisonSpider.name=剧毒蜘蛛
 entity.SpecialMobs.SmallSpider.name=小蜘蛛
-entity.SpecialMobs.ToughSpider.name=强壮的蜘蛛
+entity.SpecialMobs.ToughSpider.name=强壮蜘蛛
 entity.SpecialMobs.WebSpider.name=网蛛
 entity.SpecialMobs.WitchSpider.name=女巫蜘蛛
 
@@ -270,9 +270,19 @@ entity.SpecialMobs.WildsWitch.name=自然女巫
 entity.SpecialMobs.WindWitch.name=风之女巫
 
 entity.SpecialMobs.SpecialZombie.name=僵尸
-entity.SpecialMobs.BrutishZombie.name=野蛮的僵尸
+entity.SpecialMobs.BrutishZombie.name=野蛮僵尸
 entity.SpecialMobs.FireZombie.name=火焰僵尸
 entity.SpecialMobs.FishingZombie.name=钓鱼僵尸
 entity.SpecialMobs.GiantZombie.name=巨大僵尸
-entity.SpecialMobs.HungryZombie.name=饥饿的僵尸
+entity.SpecialMobs.HungryZombie.name=饥饿僵尸
 entity.SpecialMobs.PlagueZombie.name=瘟疫僵尸
+
+enchantment.SpecialMobs.painBow=痛苦
+enchantment.SpecialMobs.painSword=痛苦
+enchantment.SpecialMobs.plagueBow=瘟疫
+enchantment.SpecialMobs.plagueSword=瘟疫
+enchantment.SpecialMobs.poisonBow=中毒
+enchantment.SpecialMobs.poisonSword=中毒
+
+death.attack.pain=§c%1$s§f在痛苦中扭动着
+death.attack.cooked=由内而外,§c%1$s§f被烤熟了
